specification 추가 , 검색테스트